# interestingness_ros

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: interestingness.launch  interestingness_rviz.launch  interestingness_subtf.launch  interestingness_subtfrl.launch  robot.launch  subtf_bags.launch  subtfrl_bags.launch
msg/: InterestInfo.msg  UnInterests.msg
rviz/: marker.rviz  subtf.rviz  subtfrl.rviz
script/: interest_marker.py  interestingness_node.py  rosutil.py
src/: interestingness_node.cpp
